--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,5 +2,29 @@ spring:
   main:
     web-application-type: servlet
 
+  datasource:
+    driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy #logback 설정시 다음과 같이 입력해야 함
+    url: jdbc:log4jdbc:postgresql://183.101.136.74:5444/postgres #logback 설정시 앞에 jdbc:log4jdbc 붙여야 함
+    username: ENC(OBpS+CdaA8IFDkHuMri4HOKUIG8iAAe3)
+    password: ENC(zhN+Fs9PuJhRttA2PdbinNJWIt94Qhva)
+    tomcat:
+      remove-abandoned: true
+      remove-abandoned-timeout: 120
+      log-abandoned: true
+      max-active: 50
+      max-idle: 10
+      max-wait: 1000
+      #validation-query: "select 1"
+      #test-on-borrow: true
+      #test-on-connect: true
+      test-while-idle: true
+
 server:
   port: 8090
+
+jasypt:
+  encryptor:
+    bean: jasyptStringEncryptor
+    property:
+      prefix: ENC(
+      suffix: )
