Added about chapter02 codes and modified pom.xml for junit dependency addition.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,3 +28,10 @@ jasypt:
     property:
       prefix: ENC(
       suffix: )
+
+
+# Test Property Setting
+author:
+  name: TESTER
+  age: 53
+  nation: KOREA
